# FastAPI-Ecom-AI

./: README.md  compose.yaml
backend/: Dockerfile.dev  database.db  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/ecom/: main.py
backend/ecom/utils/: assistants.py  crud.py  data.ipynb  db.py  models.py  open.py  openai.py  services.py  settings.py
backend/tests/: test_main.py
frontend/: .env  data.ipynb  next.config.mjs  package-lock.json  package.json
frontend/actions/: Login.ts  add_to_cart.ts  delete_cart.ts  editProfile.ts  getOrder.ts  getProduct.ts  getUser.ts  get_cart_product.ts  openai.ts  placeorder.ts  products.ts  registerUser.ts  updateCart.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/cart/: page.tsx
frontend/app/checkout/: page.tsx
frontend/app/login/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/products/[slug]/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Add_products.tsx  Card.tsx  CartSummary.tsx  Chat.tsx  ChatBox.tsx  ChatData.ts  CreateThread.tsx  Delete_products.tsx  EditProfile.tsx  Footer.tsx  Navbar.tsx  ProductQuantity.tsx  Products.tsx  Search.tsx  Signin.tsx  Signup.tsx
frontend/lib/: auth.ts
